--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.11.0",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0"
   },
