--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3-ease": "^3.0.1",
     "react": "^18.0.0",
+    "react-circle-progress-bar": "^0.1.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.11.0",
     "react-router": "^6.17.0",
