--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "d3-ease": "^3.0.1",
     "react": "^18.0.0",
     "react-circle-progress-bar": "^0.1.4",
