--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "d3-ease": "^3.0.1",
+    "firebase": "^10.5.2",
     "react": "^18.0.0",
     "react-circle-progress-bar": "^0.1.4",
     "react-circular-progressbar": "^2.1.0",
