--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-circle-progress-bar": "^0.1.4",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.11.0",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
