--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "d3-ease": "^3.0.1",
     "firebase": "^10.5.2",
     "react": "^18.0.0",
